# QES6D

./: .gitignore  README.md  eval_qes_paper.py  generate_pseudo_labels.py  pyproject.toml  requirements.txt  run_qes_experiments.sh  train_qes_paper.py
QES6D/: __init__.py  datasets.py  loss.py  model.py  pseudo_label_generator.py  semi_supervised_datasets.py  utils.py
docs/: QES6D_Manuscript_KBS_repaired_no_classroom_labels.tex
qes6d/: __init__.py  datasets.py  model.py  utils.py
qes6d/backbone/: __init__.py  repvgg.py
scripts/: build_qes_1245_report.py  build_qes_ablation_report.py  predict.py  run_fair_five_eval.sh  smoke_test.py  test_aflw2000.py
sixdrepnet/: pseudo_label_generator.py  semi_supervised_datasets.py  utils.py
