[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qes6d"
version = "0.1.0"
description = "Minimal QES6D head pose estimation package"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.19.5",
  "opencv-python>=4.5.5",
  "Pillow>=8.4.0",
  "scipy>=1.5.4",
  "torch>=1.10.1",
  "torchvision>=0.11.2",
]

[tool.setuptools.packages.find]
include = ["qes6d*"]
